[gd_scene load_steps=19 format=3 uid="uid://dkpuvhbyw8cro"]

[ext_resource type="Script" uid="uid://dsux2sfmpdiob" path="res://scripts/menus/MainMenu.gd" id="1_cty7a"]
[ext_resource type="Texture2D" uid="uid://dpvgld8u28kef" path="res://assets/images/menu_backsplash.png" id="2_147xw"]
[ext_resource type="FontFile" uid="uid://b44dr1jdh0n8j" path="res://assets/fonts/RuinaOne-Black.ttf" id="3_41ciy"]
[ext_resource type="Theme" uid="uid://cpy5o223cev16" path="res://assets/styles/simple_button.tres" id="4_krskw"]
[ext_resource type="PackedScene" uid="uid://dl825iw012chg" path="res://scenes/misc/hide_menu.tscn" id="5_727om"]
[ext_resource type="PackedScene" uid="uid://buv4a23cpmqds" path="res://scenes/misc/show_menu.tscn" id="6_il8nq"]

[sub_resource type="LabelSettings" id="LabelSettings_6bivr"]
font = ExtResource("3_41ciy")
font_size = 44
font_color = Color(0.152941, 0.0862745, 0.0352941, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu7sn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jix8l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glbon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlkkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qe12f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qtwp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dy7ct"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0o4t1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0k4wn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5v2v"]

[node name="MainMenu" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cty7a")

[node name="MenuBacksplash" type="Sprite2D" parent="Control"]
position = Vector2(575.75, 324)
scale = Vector2(0.750326, 0.632813)
texture = ExtResource("2_147xw")

[node name="MainMenu" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="Control/MainMenu"]
layout_mode = 2
offset_left = 537.0
offset_top = 206.0
offset_right = 960.0
offset_bottom = 251.0
rotation = 0.0174533
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 62
text = "No Cows Left Behind"
label_settings = SubResource("LabelSettings_6bivr")

[node name="Play" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 540.0
offset_top = 265.0
offset_right = 604.0
offset_bottom = 295.0
size_flags_horizontal = 0
theme = ExtResource("4_krskw")
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Play
"

[node name="Help" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 510.0
offset_top = 304.0
offset_right = 634.0
offset_bottom = 334.0
size_flags_horizontal = 0
theme = ExtResource("4_krskw")
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Help"

[node name="Credits" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 542.0
offset_top = 341.0
offset_right = 647.0
offset_bottom = 371.0
size_flags_horizontal = 0
theme = ExtResource("4_krskw")
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Credits"

[node name="Exit" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 543.0
offset_top = 376.0
offset_right = 602.0
offset_bottom = 406.0
size_flags_horizontal = 0
theme = ExtResource("4_krskw")
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Exit"

[node name="CreditsMenu" type="MarginContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CreditsMenu"]
layout_mode = 2
mouse_filter = 2

[node name="CreditsTitle" type="Label" parent="Control/CreditsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 62
text = "Credits"

[node name="MarginContainer" type="MarginContainer" parent="Control/CreditsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="Control/CreditsMenu/VBoxContainer"]
layout_mode = 2
text = "These are the credits"

[node name="Back" type="Button" parent="Control/CreditsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Back"

[node name="SettingsMenu" type="MarginContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SettingsMenu"]
layout_mode = 2
mouse_filter = 2

[node name="SettingsTitle" type="Label" parent="Control/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 62
text = "Settings"

[node name="MarginContainer" type="MarginContainer" parent="Control/SettingsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="Control/SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "These are the settings"

[node name="Setting1" type="Button" parent="Control/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Setting 1"

[node name="Setting2" type="Button" parent="Control/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Setting 2"

[node name="Setting3" type="Button" parent="Control/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Setting 3"

[node name="Back" type="Button" parent="Control/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_pressed_color = Color(0.964706, 0.47451, 0, 1)
theme_override_colors/font_hover_color = Color(0.894118, 0.823529, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5v2v")
text = "Back"

[node name="HideMenu" parent="." instance=ExtResource("5_727om")]
visible = false
offset_left = -483.0
offset_top = -448.0
offset_right = 918.0
offset_bottom = 985.0

[node name="HideTimer" type="Timer" parent="HideMenu"]

[node name="ShowMenu" parent="." instance=ExtResource("6_il8nq")]
visible = false
offset_left = -483.0
offset_top = -448.0
offset_right = 918.0
offset_bottom = 985.0

[connection signal="pressed" from="Control/MainMenu/Play" to="Control" method="_on_play_pressed"]
[connection signal="pressed" from="Control/MainMenu/Help" to="Control" method="_on_help_pressed"]
[connection signal="pressed" from="Control/MainMenu/Credits" to="Control" method="_on_credits_pressed"]
[connection signal="pressed" from="Control/MainMenu/Exit" to="Control" method="_on_exit_pressed"]
[connection signal="pressed" from="Control/CreditsMenu/VBoxContainer/Back" to="Control/MainMenu" method="show"]
[connection signal="pressed" from="Control/CreditsMenu/VBoxContainer/Back" to="Control/MainMenu" method="set_mouse_filter"]
[connection signal="pressed" from="Control/CreditsMenu/VBoxContainer/Back" to="Control/CreditsMenu" method="hide"]
[connection signal="pressed" from="Control/CreditsMenu/VBoxContainer/Back" to="Control/CreditsMenu" method="set_mouse_filter" binds= [0]]
[connection signal="pressed" from="Control/SettingsMenu/VBoxContainer/Back" to="Control/MainMenu" method="show"]
[connection signal="pressed" from="Control/SettingsMenu/VBoxContainer/Back" to="Control/MainMenu" method="set_mouse_filter"]
[connection signal="pressed" from="Control/SettingsMenu/VBoxContainer/Back" to="Control/SettingsMenu" method="hide"]
[connection signal="pressed" from="Control/SettingsMenu/VBoxContainer/Back" to="Control/SettingsMenu" method="set_mouse_filter" binds= [0]]
[connection signal="timeout" from="HideMenu/HideTimer" to="Control" method="_on_hide_timer_timeout"]
